--- a/css/styles.css
+++ b/css/styles.css
@@ -20,11 +20,12 @@ body {
 
 
 .img-section img {
-  margin: 0 auto;
-  width: 300px;
-  
-  
-  
+  height: 300px;
+}
+
+.img-section {
+  display: flex;
+  justify-content: center;
 }
 
 li {
