--- a/johanna/styles.css
+++ b/johanna/styles.css
@@ -1,21 +1,26 @@
 body {
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+    font-family: "Inconsolata";
+    background-color: blanchedalmond
 }
 
 h1 {
     text-transform: uppercase;
     font-weight: normal;
     text-align: center;
+    font-family: 'Montserrat', 'Helvetica', 'sans-serif'
+}
+
+.first-name {
+    color: black;
 }
 
 .last-name {
     font-weight: 600;
-    color: grey;
+    color: plum;
+    font-style: italic;
 }
 
-.first-name {
-    color:lightslategray
-}
+
 
 h2 {
     text-transform: uppercase;
@@ -54,13 +59,14 @@ h2 {
 #watching .div-hobby {
     display: flex;
     flex-direction: column;
-    background-color: beige
 }
+
 
 .hobby {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 30px
 }
 
 #watching .article-hobby {
@@ -89,6 +95,7 @@ h2 {
     margin: 1em;
     width: 300px;
     background-color: white;
+    font-family:Helvetica, Arial, sans-serif
 }
 
 
